src/yini_test/cases/golden/strict/valid/lists/list-with-inline-objects.strict.yini
@yini strict

^ Lists
servers = [
    { host: "api-1", port: 8080 },
    { host: "api-2", port: 8081 }
]

/END
