src/yini_test/cases/golden/strict/invalid/concatenation/object-concatenation.strict.yini
@yini strict

^ Concat
object = { value: "a" } + { value: "b" }

/END
